--- a/home.html
+++ b/home.html
@@ -28,7 +28,9 @@
 		<h2>Student</h2>
 		<p> Hey! My name is Zita and I am a Junior at the University of Michigan School of Information studying Information Analysis.</p>
         <h3>Consultant | Software Developer | Aviation Enthusiast</h3>
+		<p> (& more!!!)</p>
 		<p> I have the skills and knowledge to identify and ask questions that matter to stakeholders, gather essential data to answer the questions, find answers that are grounded in empirical evidence and present those in a convincing way!</p>
+		<p> Please click through my site to learn more!</p>
 	</main>
 	<footer class="footer">
 		<p>&copy; 2021 made by Zita Jameson
